stateDiagram-v2
    [*] --> IDLE
    IDLE --> CHECKING
    CHECKING --> UPDATE_AVAILABLE
    CHECKING --> IDLE
    CHECKING --> CHECK_FAILED
    UPDATE_AVAILABLE --> DOWNLOADING
    DOWNLOADING --> DOWNLOADED
    DOWNLOADING --> DOWNLOAD_FAILED
    DOWNLOADED --> VERIFYING
    VERIFYING --> VERIFIED
    VERIFYING --> VERIFICATION_FAILED
    VERIFIED --> APPLYING
    APPLYING --> PENDING_RESTART
    APPLYING --> PATCH_FAILED
    PENDING_RESTART --> RESTARTING
    RESTARTING --> UPDATED
    RESTARTING --> ROLLBACK_REQUIRED
    UPDATED --> IDLE
    CHECK_FAILED --> IDLE
    DOWNLOAD_FAILED --> IDLE
    VERIFICATION_FAILED --> IDLE
    PATCH_FAILED --> IDLE
    ROLLBACK_REQUIRED --> IDLE
